--- a/connector_voicent_helpdesk_ticket/view/backend_voicent_call_line.xml
+++ b/connector_voicent_helpdesk_ticket/view/backend_voicent_call_line.xml
@@ -3,12 +3,14 @@
     <record id="backend_voicent_call_line_form_view_inherit" model="ir.ui.view">
         <field name="name">backend.voicent.call.line.form.view.inherit</field>
         <field name="model">backend.voicent.call.line</field>
-        <field name="inherit_id"
-               ref="connector_voicent.backend_voicent_call_line_form_view"/>
+        <field
+            name="inherit_id"
+            ref="connector_voicent.backend_voicent_call_line_form_view"
+        />
         <field name="arch" type="xml">
             <xpath expr="//group[@id='main-right']" position="inside">
-                <field name="helpdesk_ticket_stage_id"/>
-                <field name="has_parent"/>
+                <field name="helpdesk_ticket_stage_id" />
+                <field name="has_parent" />
             </xpath>
         </field>
     </record>
