--- a/documents_quality/views/res_config_settings.xml
+++ b/documents_quality/views/res_config_settings.xml
@@ -6,25 +6,17 @@
         <field name="priority" eval="70" />
         <field name="inherit_id" ref="base.res_config_settings_view_form" />
         <field name="arch" type="xml">
-            <xpath
-                expr="//div[hasclass('o_documents_block')]"
-                position="attributes"
-            >
+            <xpath expr="//div[hasclass('o_documents_block')]" position="attributes">
                 <attribute name="invisible">0</attribute>
             </xpath>
-            <xpath
-                expr="//div[hasclass('o_documents_block')]"
-                position="inside"
-            >
+            <xpath expr="//div[hasclass('o_documents_block')]" position="inside">
                 <!-- Quality Control Points -->
                 <div class="row mt16 o_settings_container">
                     <div class="col-xs-12 col-md-6 o_setting_box">
                         <div class="o_setting_left_pane">
                             <field name="documents_quality_point_settings" />
                         </div>
-                        <div
-                            class="o_setting_right_pane o_documents_right_pane"
-                        >
+                        <div class="o_setting_right_pane o_documents_right_pane">
                             <label for="documents_quality_point_settings" />
                             <span
                                 class="fa fa-lg fa-building-o"
@@ -75,9 +67,7 @@
                         <div class="o_setting_left_pane">
                             <field name="documents_quality_check_settings" />
                         </div>
-                        <div
-                            class="o_setting_right_pane o_documents_right_pane"
-                        >
+                        <div class="o_setting_right_pane o_documents_right_pane">
                             <label for="documents_quality_check_settings" />
                             <span
                                 class="fa fa-lg fa-building-o"
@@ -128,9 +118,7 @@
                         <div class="o_setting_left_pane">
                             <field name="documents_quality_alert_settings" />
                         </div>
-                        <div
-                            class="o_setting_right_pane o_documents_right_pane"
-                        >
+                        <div class="o_setting_right_pane o_documents_right_pane">
                             <label for="documents_quality_alert_settings" />
                             <span
                                 class="fa fa-lg fa-building-o"
